feat: created database structure and poc on user service
